// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hide /> should hide it's children according to screen size 1`] = `
@media (max-width:599px) {
  .c0 {
    display: none !important;
  }
}

<div
  className="c0"
>
  Content
</div>
`;

exports[`<Hide /> should hide it's children according to screen size 2`] = `
@media (min-width:600px) and (max-width:1023px) {
  .c0 {
    display: none !important;
  }
}

<div
  className="c0"
>
  Content
</div>
`;

exports[`<Hide /> should hide it's children according to screen size 3`] = `
@media (min-width:1024px) and (max-width:1439px) {
  .c0 {
    display: none !important;
  }
}

<div
  className="c0"
>
  Content
</div>
`;

exports[`<Hide /> should hide it's children according to screen size 4`] = `
@media (min-width:1440px) and (max-width:1919px) {
  .c0 {
    display: none !important;
  }
}

<div
  className="c0"
>
  Content
</div>
`;

exports[`<Hide /> should hide it's children according to screen size 5`] = `
@media (min-width:1920px) {
  .c0 {
    display: none !important;
  }
}

<div
  className="c0"
>
  Content
</div>
`;

exports[`<Hide /> should hide it's children according to screen size 6`] = `
@media (min-width:1920px) {
  .c0 {
    display: none !important;
  }
}

@media (min-width:600px) and (max-width:1023px) {
  .c0 {
    display: none !important;
  }
}

<div
  className="c0"
>
  Content
</div>
`;

exports[`<Hide /> should hide it's children according to screen size 7`] = `
@media (max-width:599px) {
  .c0 {
    display: none !important;
  }
}

@media (min-width:1024px) and (max-width:1439px) {
  .c0 {
    display: none !important;
  }
}

<div
  className="c0"
>
  Content
</div>
`;

exports[`<Hide /> should hide it's children according to screen size 8`] = `
@media (min-width:600px) and (max-width:1023px) {
  .c0 {
    display: none !important;
  }
}

@media (min-width:1024px) and (max-width:1439px) {
  .c0 {
    display: none !important;
  }
}

@media (min-width:1440px) and (max-width:1919px) {
  .c0 {
    display: none !important;
  }
}

<div
  className="c0"
>
  Content
</div>
`;
